// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DivSequenceRendering /> renders with no features 1`] = `
<div>
  <svg
    height="200"
    style="width: 100px; height: 200px;"
    width="100"
  />
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature reversed with a correct seq, zoomed in, should render nicely 1`] = `
<div>
  <svg
    height="200"
    style="width: 20000px; height: 200px;"
    width="20000"
  />
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature with a correct seq, zoomed in, should render nicely 1`] = `
<div>
  <svg
    height="200"
    style="width: 20000px; height: 200px;"
    width="20000"
  />
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature with an incorrect seq, zoomed in, should throw 1`] = `
<div>
  <svg
    height="200"
    style="width: 20000px; height: 200px;"
    width="20000"
  />
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature with no seq, zoomed in, should throw 1`] = `
<div>
  <svg
    height="200"
    style="width: 20000px; height: 200px;"
    width="20000"
  />
</div>
`;

exports[`<DivSequenceRendering /> renders with one, zoomed way out 1`] = `
<div>
  <svg
    height="200"
    style="width: 333.3333333333333px; height: 200px;"
    width="333.3333333333333"
  />
</div>
`;
